--- a/sass/header/header-contents.scss
+++ b/sass/header/header-contents.scss
@@ -5,6 +5,10 @@ header{
    background-color: $header-colour; 
    position: relative;
    border-radius: 20px 20px 0rem 0rem;
+
+   @media (max-width: 900px) {
+        border-radius: 0 0;
+    }
 }
 
 
