--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,11 @@ body {
   background-color: #0D1117;
   color: #FFF8E1;
 }
+@media (max-width: 900px) {
+  body {
+    padding: 0 0;
+  }
+}
 
 .navigation {
   display: flex;
@@ -214,6 +219,11 @@ header {
   background-color: #22303C;
   position: relative;
   border-radius: 20px 20px 0rem 0rem;
+}
+@media (max-width: 900px) {
+  header {
+    border-radius: 0 0;
+  }
 }
 
 .header_container {
@@ -890,6 +900,11 @@ footer {
 @media (max-height: 345px) and (orientation: landscape) {
   footer {
     height: 110dvh;
+  }
+}
+@media (max-width: 900px) {
+  footer {
+    border-radius: 0 0;
   }
 }
 
